netui/test/webapps/drt/web/validation/strutsValidator/success.jsp
<%@ page contentType="text/html;charset=UTF-8" language="java" %>
<%@ taglib uri="http://beehive.apache.org/netui/tags-html-1.0" prefix="netui" %>


<html>
<head>
<title>Success</title>
</head>
<body bgcolor="white">

<h3>Success</h3>

All fields passed form validation.
<br>
<br>

<netui:anchor action="begin">back</netui:anchor>

</body>
</html>
