netui/test/webapps/drt/web/errors/forward/Begin.jsp
<%@ taglib uri="http://beehive.apache.org/netui/tags-html-1.0" prefix="netui" %>
<html>
<head>
<title>Link Submit</title>
</head>
<body>
<netui:anchor action="/forward" >Forward</netui:anchor>
</body>
</html>
